--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
       integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer" />
+
+    <link rel="icon" href="img/icons/favicon.ico" type="image/x-icon" />
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="main.css" />
@@ -21,9 +22,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap"
+      rel="stylesheet" />
 
     <title>Todo List</title>
   </head>
@@ -35,7 +35,7 @@
     <form>
       <input type="text" class="todo-input" />
       <button class="todo-button" type="submit">
-        <i class="fas fa-plus-square"></i>
+        <i class="fa-regular fa-square-plus"></i>
       </button>
       <div class="select">
         <select name="todos" class="filter-todo">
@@ -55,7 +55,9 @@
 
   <footer class="footer">
     <div>
-      <p>© 2022 Coded by Ephraim Samanyayi</p>
+      <strong>
+        <p style="color: black !important">© 2022 Coded by Ephraim Samanyayi</p>
+      </strong>
     </div>
   </footer>
 </html>
